feat: agregar funcionalidad de confirmación de reserva, pagos con Stripe  y mejorar navegación
- Añadir nueva ruta para la confirmación de reserva en app.routes.ts.
- Actualizar el componente de búsqueda de habitaciones para incluir parámetros de fecha en la navegación.
- Modificar el componente de proceso de servicio para recibir y manejar parámetros de búsqueda.
- Mejorar el componente de habitaciones disponibles para utilizar parámetros de búsqueda y navegar a la confirmación de reserva con datos completos.
- Incluir información de depuración en los componentes para facilitar el seguimiento de parámetros.
-Pago con Stripe

--- a/src/app/components/landing/search-room/search-room.component.html
+++ b/src/app/components/landing/search-room/search-room.component.html
@@ -1,5 +1,5 @@
 <section class="relative h-[calc(100vh-68px)] min-h-[600px] flex items-center justify-center">
-    <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuClMrLMKZXRqVmjqpcGt_H5V8ofv2Ex2OzZkG05WosEZm34sip4Ou_wyL_6VwXFzonOpD59ze1i8VafYfwCY1M8Q7-rS2s4RFe8_UJXb03PkZ_d_uTLdu8bxFNsEllxlKDZ8jRd4TO-BwGTAh0ZdAK9V6kIMuBqEYBNUEoDjV3kpYcYn5-LsGQV1YnkhIHsG00c-1ig4fdHwO87nPbfYT6lAQfbyNE-k6Zg_xewLjL_6G0yB4a5Wl6Qf9YfMMCibFAnriNjOSJgD3CS');">
+    <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('https://cdn.akamai.steamstatic.com/steam/apps/276380/capsule_616x353.jpg?t=1660112196">
       <div class="absolute inset-0 bg-black opacity-50"></div>
     </div>
     <div class="relative z-10 text-center text-white px-6">
