--- a/src/app/components/rooms/rooms.component.html
+++ b/src/app/components/rooms/rooms.component.html
@@ -29,10 +29,9 @@
             name="type" 
             required>
             <option value="">Seleccionar tipo</option>
-            <option value="Individual">Individual</option>
-            <option value="Doble">Doble</option>
-            <option value="Suite">Suite</option>
-            <option value="Familiar">Familiar</option>
+            <option value="single">Junior</option>
+            <option value="double">Deluxe</option>
+            <option value="suite">Presidencial</option>
           </select>
         </div>
       </div>
@@ -115,10 +114,9 @@
             name="edit-type" 
             required>
             <option value="">Seleccionar tipo</option>
-            <option value="Individual">Individual</option>
-            <option value="Doble">Doble</option>
-            <option value="Suite">Suite</option>
-            <option value="Familiar">Familiar</option>
+            <option value="single">Junior</option>
+            <option value="double">Deluxe</option>
+            <option value="suite">Presidencial</option>
           </select>
         </div>
       </div>
