--- a/src/app/components/service-process/service-process.component.html
+++ b/src/app/components/service-process/service-process.component.html
@@ -54,7 +54,7 @@
           </div>
         </header>
         
-        <app-available-rooms></app-available-rooms>
+        <app-available-rooms [searchParams]="searchParams"></app-available-rooms>
 
       </div>
     </div>
