--- a/src/app/components/service-process/available-rooms/available-rooms.component.html
+++ b/src/app/components/service-process/available-rooms/available-rooms.component.html
@@ -73,7 +73,7 @@
             </div>
             <button
               class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 flex-row-reverse bg-[#e7eff3] text-[#0d171b] text-sm font-medium leading-normal w-fit hover:bg-[#d1e7f0] transition-colors"
-              (click)="selectRoom(room)"
+              (click)="goToLogin(room)"
             >
               <span class="truncate">Ver detalles y reservar</span>
             </button>
